syntax = "proto3";

package common;

message PaginationRequest {
  optional int32 limit = 1;
  optional int32 offset = 2;
}

message PaginationResponse {
  int32 total = 1;
  int32 limit = 2;
  int32 offset = 3;
}